fixed artist name alignment

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -86,7 +86,7 @@ footer .footer_copyright {
   top: 50%;
   left: 50%;
   width: 400px;
-  height: 160px;
+  height: 170px;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   border: 2px solid white;
@@ -94,7 +94,7 @@ footer .footer_copyright {
 
 .artist_name .wrapper {
   border: 2px solid white;
-  height: 121px;
+  height: 151px;
   margin: 6px;
   text-align: center;
   color: #fff;
